erDiagram
    GameSession ||--o{ ParticipantInfo : "has participants"
    GameSession ||--o{ SessionNote : "has notes"
    GameSession ||--o{ SessionDeck : "has decks"
    GameSession ||--o{ ScoreEntry : "has scores"
    GameSession ||--o{ DiceRoll : "has rolls"
    SessionDeck ||--o{ Card : "contains cards"
    SessionNote }o--|| ParticipantInfo : "owned by"
    User ||--o{ GameSession : "hosts"
    Game ||--o{ GameSession : "played in"

    GameSession {
        Guid SessionId PK
        Guid UserId FK
        Guid GameId FK
        SessionType SessionType
        DateTime SessionDate
        string Location
        SessionStatus Status
        string SessionCode UK
        DateTime CreatedAt
        DateTime EndedAt
    }

    ParticipantInfo {
        Guid ParticipantId PK
        Guid SessionId FK
        string DisplayName
        DateTime JoinedAt
        bool IsHost
    }

    SessionNote {
        Guid Id PK
        Guid SessionId FK
        Guid ParticipantId FK
        string EncryptedContent
        string ObscuredText
        bool IsRevealed
        DateTime CreatedAt
        DateTime RevealedAt
    }

    SessionDeck {
        Guid Id PK
        Guid SessionId FK
        DeckType DeckType
        string DrawPileJson
        string DiscardPileJson
        string HandsJson
        DateTime LastShuffledAt
    }

    Card {
        Guid CardId
        string Suit
        string Rank
    }

    ScoreEntry {
        Guid Id PK
        Guid SessionId FK
        Guid ParticipantId FK
        int Points
        DateTime RecordedAt
    }

    DiceRoll {
        Guid Id PK
        Guid SessionId FK
        Guid ParticipantId FK
        string Formula
        string Label
        string RollsJson
        int Modifier
        int Total
        DateTime RolledAt
    }

    User {
        Guid Id PK
        string Email
        string DisplayName
    }

    Game {
        Guid Id PK
        string Title
    }
